--- a/canciones/templates/cantantes.html
+++ b/canciones/templates/cantantes.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>lista</title>
-    <link rel="stylesheet" type="text/css ?" href="">
 </head>
 <body>
     <h1>Cantantes</h1>
@@ -13,11 +13,13 @@
         <li>({{cantantes["Name"] }} )</li>
         {% endfor %}
     </ul>
+    <h1>Genero</h1>
     <ul>
         {% for genero in genres %}
         <li>({{genero["Name"] }})</li>
         {% endfor %}
     </ul>
+    <h1>Bandas</h1>
     <ul>
         {% for album in Albumld %}
         <li>({{album["Title"] }} )</li>
