--- a/canciones/templates/base.html
+++ b/canciones/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" 
-        href="{{ url for(`static`, filename=`style.css`) }}">
+        href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>{% block header %}{% endblock %}</h1>
