--- a/canciones/templates/detalle_artistas.html
+++ b/canciones/templates/detalle_artistas.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Lista de Artistas{% endblock %}
-{% block header %}Artistas{% endblock %}
+{% block title %}Lista de Albums{% endblock %}
+{% block header %}Artista {{artista["Name"]}}{% endblock %}
 {% block content %}
-<h1>Nombre de Artista</h1>
+<h1>Nombre de albums</h1>
         <ul>
             {% for album in albums %}
               <li>
