puse en detalle albums q al apretar el album (del artista elegido) me aparesca sus canciones

--- a/canciones/templates/albums.html
+++ b/canciones/templates/albums.html
@@ -10,7 +10,7 @@
     <h1>albums</h1>
     <ul>
         {% for album in albums %}
-        <li>{{album['Name'] }}</li>
+        <li><a href="{{ url_for('albums.detalle', id=album['AlbumId'])}}">{{album['Title'] }}</a></li>
         {% endfor %}
     </ul>
 </body>
