para q me agarre el enlace (de albums y canciones)agregue el Id (AlbumId y TrackId)

--- a/canciones/templates/detalle_artistas.html
+++ b/canciones/templates/detalle_artistas.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Lista de Albums{% endblock %}
-{% block header %}Artista {{artista["Name"]}}{% endblock %}
+{% block header %}Albums de {{artista["Name"]}}{% endblock %}
 {% block content %}
-<h1>Nombre de albums</h1>
         <ul>
             {% for album in albums %}
               <li>
