cree un link en la pagina de artistas que me lleva a nuevo artista

--- a/canciones/templates/artistas.html
+++ b/canciones/templates/artistas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Artistas</h1>
+    <a href="{{url_for('artists.new')}}">Nuevo artista</a>
     <ul>
         {% for artista in artistas %}
         <li><a href="{{ url_for('artists.detalle', id=artista['ArtistId'])}}">{{ artista['Name'] }}</a> </li>
